tests/bad/ternary_not_expr.ae
/// fail: Unexpected token in parse_expression: return

def main() {
	let x = 0 if true else return -1
}